<resources>
    <string name="Action_Scheduled_calibration">Set daylight harvesting auto level </string>
    <string name="FactoryItem">Trim Settings</string>
    <string name="Factory_AutoBri_Setting">Daylight min dim (lowest dimming level of photo sensor)</string>
    <string name="Factory_Fadetime_Setting">Fade Time</string>
    <string name="Factory_Frequency">Variable</string>
    <string name="Factory_MAXBri_Setting">High-End Trim (highest dimming level)</string>
    <string name="Factory_MINBri_Setting">Low-End Trim (lowest dimming level)</string>
    <string name="Factory_PWM_Setting">PWM Freq</string>
    <string name="Factory_send">Send</string>
    <string name="Factory_unset">Not set</string>
    <string name="I_know">OK</string>
    <string name="Motor_setting">Motor Setting</string>
    <string name="Search_QR_Code_name">Search QR Code name</string>
    <string name="Unknown_Lamp">Unknown Light</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="access_little_share">Can not share high permission QR Code when you are controlling with a low permission.Please share with other way.</string>
    <string name="action_auto_group">Auto Group：%1$s</string>
    <string name="action_auto_light">Auto Light：%1$s</string>
    <string name="action_close_group">Turn Off Group：%1$s</string>
    <string name="action_close_light">Turn Off Light：%1$s</string>
    <string name="action_open_auto_group">Turn On Group：%1$s</string>
    <string name="action_open_auto_light">Turn On Light：%1$s</string>
    <string name="action_open_group">Turn On Group：%1$s</string>
    <string name="action_open_light">Turn On Light：%1$s</string>
    <string name="action_radio_auto">Auto</string>
    <string name="action_radio_open">On</string>
    <string name="action_scene_load">Load Scene：%1$s</string>
    <string name="add_Timer_now">Click to Add</string>
    <string name="add_group_now">Click to Add</string>
    <string name="add_group_over_tips">A luminaire can only be added to a maximum of 20 groups</string>
    <string name="add_group_toast">Lights grouped with more than 20 lights will not be selected</string>
    <string name="add_lamps_fail_tip">Adding Lights has been completed.If a Light or Lights have failed to be Added, please choose them again and retry.</string>
    <string name="add_switch_now">Click to Add</string>
    <string name="add_switch_tips">Please refer to switch’s specification and press the buttons on the switch to set it to pairing mode. Then RELEASE the buttons after the blue LED light flashes to let APP to find and pair with the switch.</string>
    <string name="address_too_much">Can not add more,all IDs of this mesh network has been used. Please create a new QR Code to add lights.</string>
    <string name="all_lamp_btn">All Lights</string>
    <string name="all_select">All</string>
    <string name="all_select_none">Select none</string>
    <string name="already_use_name">The name is already in use and cannot be reused.</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">c-Max</string>
    <string name="app_setting_off">Off</string>
    <string name="app_setting_on">On</string>
    <string name="app_version">%1$s</string>
    <string name="app_version1">Version：%1$s</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply_permission">Apply</string>
    <string name="area_tips">Please input the total area</string>
    <string name="arts_theate">Performing arts theate</string>
    <string name="auto">Auto</string>
    <string name="automotive_facility">Automotive facility</string>
    <string name="begin_scanning">Begin scanning</string>
    <string name="blank">  </string>
    <string name="ble_state">Bluetooth connection status:</string>
    <string name="bluetooth_advertise">Bluetooth External Visibility Permission</string>
    <string name="bluetooth_connect">Bluetooth Communication Permission</string>
    <string name="bluetooth_error">There is something wrong with Bluetooth connection, please try again!</string>
    <string name="bluetooth_scan">Bluetooth Scan Permission</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="btn_disable_ble">Disable</string>
    <string name="btn_link">Link</string>
    <string name="by_none">None</string>
    <string name="by_pir">PIR</string>
    <string name="by_pir_and_ultra">PIR + Ultra sonic</string>
    <string name="by_pir_or_ultra">PIR or Ultra sonic</string>
    <string name="by_ultra_sonic">Ultra sonic</string>
    <string name="calibrate_bri">Brightness: %1$d</string>
    <string name="calibrate_bri_setting">Set desirable brightness for Lights：</string>
    <string name="calibrate_start">Start</string>
    <string name="calibrate_temp">Temperature: %1$d</string>
    <string name="calibrate_temp_setting">Set desirable color temperature for Lights： (100 for highest, cool white；0 for lowest, warm white)</string>
    <string name="calibrate_tip">Auto calibrating may take about 15 seconds and lights will turn on and off several times, please wait…</string>
    <string name="calibrate_title">Auto Calibration</string>
    <string name="calibrate_user_finish_tip">Occupied light level set!</string>
    <string name="calibration_complete">calibration complete</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="camera_permission">For saving project QR Code image and switching to others project QR Code in your Library.</string>
    <string name="cancel">Cancel</string>
    <string name="cannot_no_name">"Name Can't be empty,Please input again!"</string>
    <string name="card_reader">card reader</string>
    <string name="cct_cool">Cool</string>
    <string name="cct_desc_url">http://www.nuroair.com/lightsettings/</string>
    <string name="cct_description">Please select the CCT range (located on product label) of the product or group. It is not advised to create groups with products of different CCT ranges. For more information on CCT ranges of products, please visit</string>
    <string name="cct_warm">Warm</string>
    <string name="change_deviceName">Change Device Name</string>
    <string name="change_group_name">Change Group Name</string>
    <string name="change_light_name">Change Light Name</string>
    <string name="change_qrCode">Switch to Control Other Lights</string>
    <string name="change_qrCode_complete_toast">Before adding devices during commissioning process, ensure QR code for the Zone is saved on commissioning device and provided to jobsite manager/primary contact as backup.  QR codes cannot be retrieved if lost.  If QR code is lost, manual reset of devices currently assigned under that QR code will be required for further commissioning.  If abandoning a commissioning process that is underway, please first “Delete” the devices in the “Lights” menu first, so the lights can be properly added for the next commissioning attempt.</string>
    <string name="change_qrCode_name">Change QR Code Name</string>
    <string name="dhcp">DHCP:</string>
    <string name="dns">Preferred DNS:</string>
    <string name="dns_tips">Please enter the DNS</string>
    <string name="em_begin_date">Begin Date:</string>
    <string name="em_building_type">Building Type:</string>
    <string name="em_code_name">Zone Name:</string>
    <string name="em_end_date">End Date:</string>
    <string name="em_end_date_tips">End Date for Exporting</string>
    <string name="em_export_file_tips">Export duration must be less than 90 days due to data volume</string>
    <string name="em_select_type_tips">Select Building Type</string>
    <string name="em_select_zone_tips">Select Zone</string>
    <string name="em_start_date_tips">Begin Date for Exporting</string>
    <string name="export_file">Export Energy Report</string>
    <string name="gateway">Gateway:</string>
    <string name="gateway_tips">Please enter the gateway address</string>
    <string name="get_ipV4">Get IP Info</string>
    <string name="ipV4_address">IPV4 Address:</string>
    <string name="ipV4_tips">Please enter an IPV4 address</string>
    <string name="lamp_info_RSSI">RSSI</string>
    <string name="lamp_info_id">ID</string>
    <string name="lamp_info_mac">MAC</string>
    <string name="lamp_info_name">Name</string>
    <string name="lamp_info_switch">ON/OFF</string>
    <string name="lamp_info_type">Type</string>
    <string name="lamp_info_version">Rev</string>
    <string name="mac_address">Mac Address</string>
    <string name="mask_tips">Please enter the subnet mask</string>
    <string name="radio_group">Groups</string>
    <string name="radio_lamp">Lights</string>
    <string name="radio_more">More</string>
    <string name="radio_scene">Scenes</string>
    <string name="radio_switch">Switches</string>
    <string name="scan_device_count">Added Devices:   %1$d</string>
    <string name="scan_light_count">Added Lights:   %1$d</string>
    <string name="scan_switch_count">Added Switches:   %1$d</string>
    <string name="search_hint">Enter MAC address to search for lamps</string>
    <string name="square_feet">(square feet)</string>
    <string name="subnet_mask">Subnet Mask:</string>
    <string name="total_area">Total area：</string>
    <string name="wifi_name">WIFI ssid:</string>
    <string name="wifi_name_tips">Please enter the WIFI name</string>
    <string name="wifi_pswd">WIFI password:</string>
    <string name="wifi_pswd_tips">Please enter the WIFI password</string>
</resources>