<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="?custom_attr_app_content_bg_color" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/rl_title" layout="@layout/top_title_layout" />
    <LinearLayout android:orientation="vertical" android:id="@id/ll_sv" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_below="@id/rl_title">
        <android.widget.SearchView android:id="@id/searchView" android:layout_width="fill_parent" android:layout_height="fill_parent" android:hint="@string/search_hint" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/ll_top_title" android:background="@drawable/nearby_lamp_check_top_title_bg" android:layout_width="fill_parent" android:layout_height="60.0dip" android:layout_below="@id/ll_sv">
        <View android:background="?custom_attr_app_nearlamp_seperator_color" android:layout_width="@dimen/dp_2px" android:layout_height="fill_parent" android:layout_marginStart="40.0dip" />
        <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="60.0dip" android:layout_weight="4.0">
            <TextView android:padding="@dimen/dp_3" android:layout_width="fill_parent" android:layout_height="30.0dip" android:text="@string/lamp_info_name" style="@style/style_nearlamp_top_text_content" />
            <TextView android:padding="@dimen/dp_3" android:layout_width="fill_parent" android:layout_height="30.0dip" android:text="@string/lamp_info_mac" style="@style/style_nearlamp_top_text_content" />
        </LinearLayout>
        <View android:background="?custom_attr_app_nearlamp_seperator_color" android:layout_width="@dimen/dp_2px" android:layout_height="fill_parent" />
        <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="60.0dip" android:layout_weight="4.0">
            <TextView android:padding="@dimen/dp_3" android:layout_width="fill_parent" android:layout_height="30.0dip" android:text="@string/lamp_info_type" style="@style/style_nearlamp_top_text_content" />
            <TextView android:padding="@dimen/dp_3" android:layout_width="fill_parent" android:layout_height="30.0dip" android:text="@string/lamp_info_version" style="@style/style_nearlamp_top_text_content" />
        </LinearLayout>
        <View android:background="?custom_attr_app_nearlamp_seperator_color" android:layout_width="@dimen/dp_2px" android:layout_height="fill_parent" />
        <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="60.0dip" android:layout_weight="3.0">
            <TextView android:padding="@dimen/dp_3" android:layout_width="fill_parent" android:layout_height="30.0dip" android:text="@string/lamp_info_id" style="@style/style_nearlamp_top_text_content" />
            <TextView android:padding="@dimen/dp_3" android:layout_width="fill_parent" android:layout_height="30.0dip" android:text="@string/lamp_info_RSSI" style="@style/style_nearlamp_top_text_content" />
        </LinearLayout>
    </LinearLayout>
    <com.litetrace.bluetooth.light.widget.swipe.recyclerview.SwipeMenuRecyclerView android:id="@id/rv_nearby_devices" android:paddingBottom="@dimen/dp_10" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/ll_top_title" />
</RelativeLayout>