<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center" android:orientation="vertical" android:background="?custom_attr_setting_content_bg_color" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/top_title_layout" />
    <TextView android:gravity="start|center" android:id="@id/tv_deviceName" android:focusable="true" android:focusableInTouchMode="true" android:layout_marginTop="@dimen/dp_24" android:layout_marginBottom="@dimen/dp_5" android:layout_marginStart="27.0dip" style="@style/style_timer_title" />
    <LinearLayout android:orientation="horizontal" android:padding="@dimen/dp_5" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginTop="@dimen/dp_15" android:layout_marginStart="@dimen/dp_15" android:layout_marginEnd="@dimen/dp_15">
        <TextView android:textSize="@dimen/sp_14" android:textColor="@color/black" android:gravity="center_vertical" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/wifi_name" android:layout_weight="1.0" />
        <EditText android:textSize="@dimen/sp_14" android:textColor="@color/black" android:gravity="center" android:id="@id/et_bwSSId" android:background="@drawable/shape_scene_edit_name_bg" android:layout_width="0.0dip" android:layout_height="fill_parent" android:hint="@string/wifi_name_tips" android:maxLines="1" android:layout_weight="2.2" android:inputType="textWebEmailAddress" android:paddingStart="@dimen/dp_5" android:layout_marginStart="@dimen/dp_10" android:importantForAutofill="no" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:padding="@dimen/dp_5" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginTop="@dimen/dp_15" android:layout_marginStart="@dimen/dp_15" android:layout_marginEnd="@dimen/dp_15">
        <TextView android:textSize="@dimen/sp_14" android:textColor="@color/black" android:gravity="center_vertical" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/wifi_pswd" android:layout_weight="1.0" />
        <EditText android:textSize="@dimen/sp_14" android:textColor="@color/black" android:gravity="center" android:id="@id/et_bwPassword" android:background="@drawable/shape_scene_edit_name_bg" android:layout_width="0.0dip" android:layout_height="fill_parent" android:hint="@string/wifi_pswd_tips" android:maxLines="1" android:layout_weight="2.2" android:inputType="textVisiblePassword" android:paddingStart="@dimen/dp_5" android:layout_marginStart="@dimen/dp_10" android:importantForAutofill="no" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:padding="@dimen/dp_5" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginTop="@dimen/dp_15" android:layout_marginStart="@dimen/dp_15" android:layout_marginEnd="@dimen/dp_15">
        <TextView android:textSize="@dimen/sp_14" android:textColor="@color/black" android:gravity="center_vertical" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/dhcp" android:layout_weight="1.0" />
        <RelativeLayout android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="2.2" android:layout_marginStart="@dimen/dp_10">
            <ToggleButton android:id="@id/tb_DHCP" android:background="@drawable/toggle_btn_selector" android:focusable="false" android:layout_width="@dimen/size_toggle_width" android:layout_height="@dimen/size_toggle_height" android:checked="false" android:textOn="" android:textOff="" android:text="" android:layout_centerVertical="true" android:layout_alignParentStart="true" />
            <TextView android:textSize="@dimen/sp_13" android:textColor="@color/black" android:gravity="center" android:id="@id/tv_getIp" android:background="@drawable/selector_btn_round" android:layout_width="120.0dip" android:layout_height="fill_parent" android:text="@string/get_ipV4" android:layout_alignParentEnd="true" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:padding="@dimen/dp_5" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginTop="@dimen/dp_15" android:layout_marginStart="@dimen/dp_15" android:layout_marginEnd="@dimen/dp_15">
        <TextView android:textSize="@dimen/sp_14" android:textColor="@color/black" android:gravity="center_vertical" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/ipV4_address" android:layout_weight="1.0" />
        <EditText android:textSize="@dimen/sp_14" android:textColor="@color/black" android:gravity="center" android:id="@id/et_ipV4Address" android:background="@drawable/shape_scene_edit_name_bg" android:layout_width="0.0dip" android:layout_height="fill_parent" android:hint="@string/ipV4_tips" android:maxLines="1" android:digits="0123456789." android:layout_weight="2.2" android:inputType="phone" android:paddingStart="@dimen/dp_5" android:layout_marginStart="@dimen/dp_10" android:importantForAutofill="no" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:padding="@dimen/dp_5" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginTop="@dimen/dp_15" android:layout_marginStart="@dimen/dp_15" android:layout_marginEnd="@dimen/dp_15">
        <TextView android:textSize="@dimen/sp_14" android:textColor="@color/black" android:gravity="center_vertical" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/gateway" android:layout_weight="1.0" />
        <EditText android:textSize="@dimen/sp_14" android:textColor="@color/black" android:gravity="center" android:id="@id/et_gateway" android:background="@drawable/shape_scene_edit_name_bg" android:layout_width="0.0dip" android:layout_height="fill_parent" android:hint="@string/gateway_tips" android:maxLines="1" android:digits="0123456789." android:layout_weight="2.2" android:inputType="phone" android:paddingStart="@dimen/dp_5" android:layout_marginStart="@dimen/dp_10" android:importantForAutofill="no" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:padding="@dimen/dp_5" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginTop="@dimen/dp_15" android:layout_marginStart="@dimen/dp_15" android:layout_marginEnd="@dimen/dp_15">
        <TextView android:textSize="@dimen/sp_14" android:textColor="@color/black" android:gravity="center_vertical" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/subnet_mask" android:layout_weight="1.0" />
        <EditText android:textSize="@dimen/sp_14" android:textColor="@color/black" android:gravity="center" android:id="@id/et_mask" android:background="@drawable/shape_scene_edit_name_bg" android:layout_width="0.0dip" android:layout_height="fill_parent" android:hint="@string/mask_tips" android:maxLines="1" android:digits="0123456789." android:layout_weight="2.2" android:inputType="phone" android:paddingStart="@dimen/dp_5" android:layout_marginStart="@dimen/dp_10" android:importantForAutofill="no" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:padding="@dimen/dp_5" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginTop="@dimen/dp_15" android:layout_marginStart="@dimen/dp_15" android:layout_marginEnd="@dimen/dp_15">
        <TextView android:textSize="@dimen/sp_14" android:textColor="@color/black" android:gravity="center_vertical" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/dns" android:layout_weight="1.0" />
        <EditText android:textSize="@dimen/sp_14" android:textColor="@color/black" android:gravity="center" android:id="@id/et_dns" android:background="@drawable/shape_scene_edit_name_bg" android:layout_width="0.0dip" android:layout_height="fill_parent" android:hint="@string/dns_tips" android:maxLines="1" android:digits="0123456789." android:layout_weight="2.2" android:inputType="phone" android:paddingStart="@dimen/dp_5" android:layout_marginStart="@dimen/dp_10" android:importantForAutofill="no" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:padding="@dimen/dp_5" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginTop="@dimen/dp_15" android:layout_marginStart="@dimen/dp_15" android:layout_marginEnd="@dimen/dp_15">
        <TextView android:textSize="@dimen/sp_14" android:textColor="@color/black" android:gravity="center_vertical" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/mac_address" android:layout_weight="1.0" />
        <EditText android:enabled="false" android:textSize="@dimen/sp_14" android:textColor="@color/black" android:gravity="center" android:id="@id/et_mac_address" android:background="@drawable/shape_no_edit_bg" android:layout_width="0.0dip" android:layout_height="fill_parent" android:maxLines="1" android:layout_weight="2.2" android:paddingStart="@dimen/dp_5" android:layout_marginStart="@dimen/dp_10" android:importantForAutofill="no" />
    </LinearLayout>
    <Button android:id="@id/btn_bwSend" android:layout_marginTop="@dimen/dp_36" android:text="@string/Factory_send" style="@style/style_btn_save" />
</LinearLayout>