<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="horizontal" android:background="@color/light_white" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/sp_12" android:textColor="@color/dark_grey" android:gravity="center" android:id="@id/head1" android:background="@drawable/gray_bg" android:padding="@dimen/dp_5" android:layout_width="44.0dip" android:layout_height="32.0dip" android:text="@string/lamp_info_type" android:maxLines="1" />
    <TextView android:textSize="@dimen/sp_12" android:textColor="@color/dark_grey" android:gravity="center" android:id="@id/head2" android:background="@drawable/gray_bg" android:padding="@dimen/dp_5" android:layout_width="0.0dip" android:layout_height="32.0dip" android:layout_marginLeft="-1.0dip" android:text="@string/lamp_info_name" android:maxLines="1" android:layout_weight="1.8" />
    <TextView android:textSize="@dimen/sp_12" android:textColor="@color/dark_grey" android:gravity="center" android:id="@id/head3" android:background="@drawable/gray_bg" android:padding="@dimen/dp_5" android:layout_width="0.0dip" android:layout_height="32.0dip" android:layout_marginLeft="-1.0dip" android:text="@string/lamp_info_switch" android:maxLines="1" android:layout_weight="1.8" />
</LinearLayout>